--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ aiosignal==1.3.1
 anyio==3.6.2
 async-timeout==4.0.2
 attrs==22.2.0
+bidict==0.22.1
 black==23.1.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
+cloudpickle==2.2.1
 commonmark==0.9.1
 fastapi==0.88.0
 frozenlist==1.3.3
@@ -25,12 +27,17 @@ plotly==5.13.1
 psutil==5.9.4
 pydantic==1.10.2
 Pygments==2.14.0
+pynecone==0.1.20
 pynecone-io==0.1.14
 python-dotenv==1.0.0
+python-engineio==4.4.0
+python-multipart==0.0.5
+python-socketio==5.8.0
 redis==4.5.3
 requests==2.28.2
 rfc3986==1.5.0
 rich==12.6.0
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==1.4.41
 sqlalchemy2-stubs==0.0.2a32
@@ -43,5 +50,6 @@ typer==0.4.2
 typing_extensions==4.5.0
 urllib3==1.26.15
 uvicorn==0.20.0
+watchdog==2.3.1
 websockets==10.4
 yarl==1.8.2
